--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1 id="title">Duel Duo</h1>
@@ -48,9 +48,9 @@
     
     <button id="duel">DUEL!</button>
 
-    <script src="http://localhost:3000/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@0.27.2/dist/axios.min.js"></script>
 
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 
    
 </body>
